# FinArena

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_validator.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  finance_environment.py  requirements.txt  rubrics.py  tasks.py  tools.py  world.py
server/data/: accounts.json  budgets.json  customers.json  employees.json  generate_seed_data.py  policies.json  tax_rates.json  vendors.json
server/static/: index.html
tests/: test_improvements.py
