[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-finance_ops_env"
version = "0.1.0"
description = "FinanceOps OpenEnv — enterprise finance workflows with 25 tools, 70 tasks, rubric-based rewards"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
eval = [
    "openai>=1.0.0",
]
train = [
    "trl>=0.22.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "finance_ops_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["finance_ops_env", "finance_ops_env.server"]
package-dir = { "finance_ops_env" = ".", "finance_ops_env.server" = "server" }

[tool.setuptools.package-data]
"finance_ops_env.server" = ["data/*.json", "static/*"]
